# kontroller

./: .pre-commit-config.yaml  README.md
firmware/: .mxproject  CMakeLists.txt  Linker.ld  STM32L433XX_FLASH.ld  kontroller.ioc  run.sh  startup.s
firmware/Core/Inc/: main.h
firmware/Core/Src/: main.c
firmware/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
firmware/cmake/stm32cubemx/: CMakeLists.txt
firmware/docs/: DEVELOPMENT.md
firmware/hal/inc/: hal.h
firmware/hal/src/: adc.c  adc.h  clock.c  clock.h  gpio.c  gpio.h  hal.c  interrupts.c  interrupts.h  registers.h  systick.c  systick.h  uart.c  uart.h
firmware/src/: main.c
